# xpeed-node

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  Xpeed.rc  doxygen.config  xpeedcoin-beta.spec.in  xpeedcoin.spec.in
ci/: build-gitlab.sh  clang-format-all.sh  record_rep_weights.py
crypto/phc-winner-argon2/src/: core.c
etc/systemd/: xpeedcoin-beta.service  xpeedcoin.service
util/: changelog_generator  makesrc
util/build_prep/: bootstrap_boost.sh  common.sh  update-common
util/build_prep/ubuntu/: prep.sh.in
xpeed/lib/: CMakeLists.txt  blockbuilders.cpp  blockbuilders.hpp  blocks.cpp  blocks.hpp  config.hpp  errors.cpp  errors.hpp  interface.cpp  interface.h  jsonconfig.hpp  numbers.cpp  numbers.hpp  timer.hpp  utility.cpp  utility.hpp  work.cpp  work.hpp
xpeed/lib/plat/darwin/: thread_role.cpp
xpeed/lib/plat/default/: priority.cpp
xpeed/lib/plat/freebsd/: thread_role.cpp
xpeed/lib/plat/linux/: priority.cpp  thread_role.cpp
xpeed/lib/plat/posix/: perms.cpp
xpeed/lib/plat/windows/: perms.cpp  priority.cpp  thread_role.cpp
xpeed/node/: CMakeLists.txt  blockprocessor.cpp  blockprocessor.hpp  bootstrap.cpp  bootstrap.hpp  cli.cpp  cli.hpp  common.cpp  common.hpp  ipc.cpp  ipc.hpp  lmdb.cpp  lmdb.hpp  logging.cpp  logging.hpp  node.cpp  node.hpp  nodeconfig.cpp  nodeconfig.hpp  openclwork.cpp  openclwork.hpp  peers.cpp  peers.hpp  portmapping.cpp  portmapping.hpp  rpc.cpp  rpc.hpp  rpc_secure.cpp  rpc_secure.hpp  signatures.cpp  signatures.hpp  stats.cpp  stats.hpp  testing.cpp  testing.hpp  voting.cpp  voting.hpp  wallet.cpp  wallet.hpp  working.hpp  (+1 more)
xpeed/node/plat/posix/: openclapi.cpp
xpeed/secure/: CMakeLists.txt  blockstore.cpp  blockstore.hpp  common.cpp  common.hpp  ledger.cpp  ledger.hpp  utility.cpp  utility.hpp  versioning.cpp  versioning.hpp
xpeed/secure/plat/osx/: working.mm
xpeed/secure/plat/posix/: working.cpp
xpeed/secure/plat/windows/: working.cpp
xpeed/xpd_node/: CMakeLists.txt  daemon.cpp  daemon.hpp  entry.cpp
